--- a/package.json
+++ b/package.json
@@ -43,8 +43,7 @@
   },
   "homepage": "https://github.com/mdmower/node-package-version-diff#readme",
   "dependencies": {
-    "@pnpm/lockfile-file": "^9.1.3",
-    "@pnpm/lockfile-walker": "^9.0.4",
+    "@npvd/npvd-pnpm-v6": "^0.1.0",
     "@pnpm/lockfile.fs": "^1001.1.11",
     "@pnpm/lockfile.walker": "^1001.0.8",
     "commander": "^13.1.0",
