--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "node-package-version-diff",
+  "name": "@npvd/npvd",
   "version": "0.3.1",
   "description": "Identify version differences between node package lockfile revisions",
   "type": "module",
@@ -27,7 +27,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/mdmower/node-package-version-diff.git"
+    "url": "git+https://github.com/mdmower/npvd.git"
   },
   "keywords": [
     "version",
@@ -39,9 +39,9 @@
   "author": "Matt Mower <mdmower@cmphys.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/mdmower/node-package-version-diff/issues"
+    "url": "https://github.com/mdmower/npvd/issues"
   },
-  "homepage": "https://github.com/mdmower/node-package-version-diff#readme",
+  "homepage": "https://github.com/mdmower/npvd#readme",
   "dependencies": {
     "@npvd/npvd-pnpm-v6": "^0.1.0",
     "@pnpm/lockfile.fs": "^1001.1.21",
